--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,6 +22,13 @@ input {
     margin-bottom: 10px;
 }
 
+#input {
+    margin: 15px;
+    margin-bottom: 10px;
+}
+
+
+
 .log-in, .log-out, .register {
   background-color: #00acb0;
   border-radius: 4px;
