--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,19 +2,20 @@
     font-size: 24px;
     font-weight: 700;
     display: inline-block;
-    color: #f2f2f2;
+    color: #FF800D;
     padding-left: 10px;
 }
 
 .nav {
   overflow: hidden;
-  background-color: #00acb0;
+  background-color: #C0393D;
 }
 
 .nav-link {
-  float: left;
-  color: #f2f2f2;
-  background-color: #00acb0;
+  display: flex;
+  justify-content: space-between;
+  color: #FF800D;
+  background-color: #C0393D;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -28,7 +29,7 @@
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  background-color: #C0393D;
 }
 
 .nav-right {
