--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,7 +12,7 @@ form {
     background-color: #9B7874;
     color: #FF800D;
     width: auto;
-    height: fill;
+    height: 100vh;
     margin: 0px auto;
     padding: 30px;
     border-radius: 2px;
