--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -17,10 +17,9 @@
   color: #FF800D;
   background-color: #C0393D;
   text-align: center;
-  padding: 24px 10px;
+  padding: 10px;
   text-decoration: none;
   font-size: 15px;
-
   /* these last two make the logout button in
   the nav bar look like another link */
   border:none;
