--- a/src/components/CharacterCreationPage/Modal.css
+++ b/src/components/CharacterCreationPage/Modal.css
@@ -1,9 +1,11 @@
 .modal {
-  font-size: 12px;
+  font-size: 10px;
   background-color: #9B7874;
+  width: 100%;
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 .modal > .header {
-  width: 100%;
   border-bottom: 1px solid gray;
   font-size: 18px;
   text-align: center;
@@ -12,18 +14,29 @@
 .modal > .content {
   width: 100%;
   padding: 0px;
+  font-size: 10px;
 }
 .modal > .actions {
-  width: 100%;
   padding: 0px;
   margin: auto;
   text-align: center;
 }
+
 .modal > .close {
   cursor: pointer;
   position: absolute;
   display: block;
-  padding: 0px;
+  padding: 2px 5px;
+  line-height: 20px;
+  right: -10px;
+  top: -10px;
   font-size: 24px;
-  background: #9B7874;
+  background: #ffffff;
+  border-radius: 18px;
+  border: 1px solid #cfcece;
 }
+
+.edit-form {
+  font-size: 8px;
+}
+
